@startuml h24s_10

hide circle

skinparam linetype ortho

title h24s_10

package "h24s_10" as "h24s_10" {
    entity "events" {
        + id: VARCHAR(36) [PK]
        title: VARCHAR(255)
        start: DATETIME
        end: DATETIME
        host_id: VARCHAR(36)
        location: VARCHAR(255)
        description: TEXT
        created_at: DATETIME
        is_confirmed: TINYINT
        status: VARCHAR(32)
    }

    entity "targets" {
        + id: VARCHAR(36) [PK]
        event_id: VARCHAR(36)
        user_id: VARCHAR(36)
        created_at: DATETIME
    }

    entity "participants" {
        + id: VARCHAR(36) [PK]
        traq_id: VARCHAR(255)
        event_id: VARCHAR(36)
        team_id: INT
    }

    entity "event_dates" {
        + id: VARCHAR(36) [PK]
        event_id: VARCHAR(36)
        start: DATETIME
        end: DATETIME
        created_at: DATETIME
    }

    entity "date_votes" {
        + id: VARCHAR(36) [PK]
        event_date_id: VARCHAR(36)
        traq_id: VARCHAR(36)
        created_at: DATETIME
    }

    entity "comments" {
        + id: VARCHAR(36) [PK]
        event_id: VARCHAR(36)
        traq_id: VARCHAR(36)
        content: TEXT
        created_at: DATETIME
    }
}

events ||--o{ participants: "event_id"
events ||--o{ event_dates: "event_id"
event_dates ||--o{ date_votes: "event_date_id"
events ||--o{ comments: "event_id"
events ||--o{ targets: "event_id"

@enduml
